--- a/assets/css/theme-event.css
+++ b/assets/css/theme-event.css
@@ -1747,7 +1747,7 @@ textarea.form-control {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.4375rem 1.25rem;
+  padding: 0.45rem .8rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.3125rem;
