--- a/assets/css/theme-event.css
+++ b/assets/css/theme-event.css
@@ -1912,8 +1912,8 @@ fieldset:disabled a.btn {
   border-color: #f8f9fa; }
   .btn-light:hover {
     color: #212529;
-    background-color: #e2e6ea;
-    border-color: #dae0e5; }
+    background-color: #ffffff;
+    border-color: #fdb643; }
   .btn-light:focus, .btn-light.focus {
     box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5); }
   .btn-light.disabled, .btn-light:disabled {
@@ -1928,6 +1928,30 @@ fieldset:disabled a.btn {
     .btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus,
     .show > .btn-light.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5); }
+
+      .btn-lightG {
+        color: #212529;
+        background-color: #f8f9fa;
+        border-color: #f8f9fa; }
+        .btn-lightG:hover {
+          color: #212529;
+          background-color: #ffffff;
+          border-color: #219668;
+        }
+        .btn-lightG:focus, .btn-lightG.focus {
+          box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5); }
+        .btn-lightG.disabled, .btn-lightG:disabled {
+          color: #212529;
+          background-color: #f8f9fa;
+          border-color: #f8f9fa; }
+        .btn-lightG:not(:disabled):not(.disabled):active, .btn-lightG:not(:disabled):not(.disabled).active,
+        .show > .btn-lightG.dropdown-toggle {
+          color: #212529;
+          background-color: #dae0e5;
+          border-color: #d3d9df; }
+          .btn-lightG:not(:disabled):not(.disabled):active:focus, .btn-lightG:not(:disabled):not(.disabled).active:focus,
+          .show > .btn-lightG.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5); }
 
 .btn-dark {
   color: #fff;
@@ -7855,6 +7879,9 @@ img.bg-image {
 .btn.btn-light * {
   fill: #212529; }
 
+.btn.btn-lightG * {
+  fill: #212529; }
+
 .btn-outline-light:hover * {
   fill: #212529; }
 
@@ -7877,8 +7904,12 @@ img.bg-image {
   fill: #fff; }
 
 .btn-light {
-  border-color: #dee2e6;
-  background: #f8f9fa; }
+  border-color: #575a5d;
+  background: #f0f0f0; }
+
+.btn-lightG {
+  border-color: #575a5d;
+  background: #f0f0f0; }
 
 .btn-white {
   background: #fff;
