btn border ui update

--- a/assets/css/theme-event.css
+++ b/assets/css/theme-event.css
@@ -7904,11 +7904,11 @@ img.bg-image {
   fill: #fff; }
 
 .btn-light {
-  border-color: #575a5d;
+  border-color: #999999;
   background: #f0f0f0; }
 
 .btn-lightG {
-  border-color: #575a5d;
+  border-color: #999999;
   background: #f0f0f0; }
 
 .btn-white {
