--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2000,16 +2000,16 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(61, 65, 88, 0.5); }
 
 .btn-outline-primary {
-  color: #3755BE;
-  border-color: #3755BE; }
+  color: #0066b3;
+  border-color: #0066b3; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #3755BE;
-    border-color: #3755BE; }
+    background-color: #0066b3;
+    border-color: #0066b3; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(55, 85, 190, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #3755BE;
+    color: #0066b3;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
