--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -311,7 +311,7 @@ h1, h2, h3, h4, h5, h6,
   color: #212529; }
 
 h1, .h1 {
-  font-size: 2.5rem; }
+  font-size: 3rem; }
 
 h2, .h2 {
   font-size: 2rem; }
@@ -2002,16 +2002,16 @@ fieldset:disabled a.btn {
 
 
 .btn-outline-primary {
-  color: #0066b3;
-  border-color: #0066b3; }
+  color: #3755BE;
+  border-color: #3755BE; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #0066b3;
-    border-color: #0066b3; }
+    background-color: #3755BE;
+    border-color: #3755BE; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(55, 85, 190, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #0066b3;
+    color: #3755BE;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
@@ -11551,7 +11551,7 @@ https://flickity.metafizzy.co
   .icon.icon-md {
     height: 2.25rem; }
   .icon.icon-lg {
-    height: 8rem; }
+    height: 3rem; }
   .icon.icon-sm {
     height: 0.75rem; }
 
